--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -47,4 +47,12 @@
     <string name="reset_hidden_apps">Reset all</string>
 
     <string name="footer_info">If Always on is enabled, brightness gets recalculated to follow hardware specifications, so don\'t consider above values as absolute ones.\n\nLong press on the left text value to set it manually.</string>
+
+    <string name="brightness_title">Brightness</string>
+    <string name="ambient_pulse_brightness_title">Ambient display brightness</string>
+    <string name="ambient_doze_brightness_title">Always on display brightness</string>
+
+    <!-- Raise to wake strings-->
+    <string name="raise_to_wake_gesture_title">Raise to wake</string>
+    <string name="raise_to_wake_gesture_summary">Wake up the device instead of pulsing notification</string>
 </resources>
